# taken

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  pyproject.toml  skills-lock.json
.agents/rules/: testing.md
.claude/rules/: testing.md
.github/workflows/: _build.yml  _lint.yml  _test.yml  ci.yml  pr.yml  publish.yml
docs/: project_structure.md
src/taken/: main.py
src/taken/commands/: add.py  git.py  init.py  install.py  list.py  remove.py  save.py  update.py  use.py
src/taken/core/: config.py  editor.py  git.py  github.py  hashing.py  paths.py  project.py  registry.py  skills.py
src/taken/models/: config.py  project.py  registry.py
src/taken/utils/: console.py
tests/: conftest.py
tests/commands/: conftest.py  test_add.py  test_git.py  test_init.py  test_install.py  test_list.py  test_remove.py  test_save.py  test_update.py  test_use.py
tests/core/: test_github.py  test_paths.py
tests/fixtures/: config.py  registry.py
