[project]
name = "taken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pradyoth", email = "sppradyoth@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "inquirerpy>=0.3.4",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
    "typer>=0.24.2",
]

[project.scripts]
taken = "taken.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]
